fix overlapping text on mobile

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -1,3 +1,6 @@
+.ct-series-a .ct-label {
+  transform: translateY(40px);
+}
 #rightnav {
   float:right;
 }
